OSJ-318 - Deprecate terms from classes and configuration
https://issues.shibboleth.net/jira/browse/OSJ-318

Deprecated and replaced algorithm policy APIs and classes.
Cleaned a lot of warnings from unrelated tests.