@@ -17,40 +17,43 @@
 
 package org.opensaml.xmlsec.impl;
 
-import java.util.Arrays;
+import java.util.List;
 
 import net.shibboleth.utilities.java.support.logic.ConstraintViolationException;
 
 import org.testng.Assert;
 import org.testng.annotations.Test;
 
-public class BlacklistPredicateTest {
+/**
+ *
+ */
+public class IncludedAlgorithmsPredicateTest {
 
     @Test
     public void testBasic() {
-        BlacklistPredicate predicate = new BlacklistPredicate(Arrays.asList("A", "B", "C", "D"));
+        IncludedAlgorithmsPredicate predicate = new IncludedAlgorithmsPredicate(List.of("A", "B", "C", "D"));
         
-        Assert.assertFalse(predicate.test("A"));
-        Assert.assertFalse(predicate.test("B"));
-        Assert.assertFalse(predicate.test("C"));
-        Assert.assertFalse(predicate.test("D"));
+        Assert.assertTrue(predicate.test("A"));
+        Assert.assertTrue(predicate.test("B"));
+        Assert.assertTrue(predicate.test("C"));
+        Assert.assertTrue(predicate.test("D"));
         
-        Assert.assertTrue(predicate.test("X"));
-        Assert.assertTrue(predicate.test("Y"));
-        Assert.assertTrue(predicate.test("Z"));
-        Assert.assertTrue(predicate.test("foo"));
-        Assert.assertTrue(predicate.test("bar"));
-        Assert.assertTrue(predicate.test("bax"));
+        Assert.assertFalse(predicate.test("X"));
+        Assert.assertFalse(predicate.test("Y"));
+        Assert.assertFalse(predicate.test("Z"));
+        Assert.assertFalse(predicate.test("foo"));
+        Assert.assertFalse(predicate.test("bar"));
+        Assert.assertFalse(predicate.test("bax"));
     }
     
     @Test(expectedExceptions=ConstraintViolationException.class)
     public void testNullSet() {
-        new BlacklistPredicate(null);
+        new IncludedAlgorithmsPredicate(null);
     }
     
     @Test(expectedExceptions=IllegalArgumentException.class)
     public void testNullArg() {
-        BlacklistPredicate predicate = new BlacklistPredicate(Arrays.asList("A", "B", "C", "D"));
+        IncludedAlgorithmsPredicate predicate = new IncludedAlgorithmsPredicate(List.of("A", "B", "C", "D"));
         predicate.test(null);
     }
     
